--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:ui": "rm -rf build && cd ../../eric/part2/the-phonebook && npm run build --prod && cp -r build ../../../eric/phonebook-backend/",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "postinstall": "ng build"
   },
   "eslintConfig": {
     "extends": [
